Fixed a similar bug, where using /light reroll cooldown would use a random power instead.

Now the duration is better controllable using the config setting, and the duration of all the lights has been extended using the multiplier.
Now the base values range from 1 to 16, and the default multiplier is 1.3. You can also adjust for low values in the config.

Added /light reroll all command to reroll every aspect of the light

Changed how the light types,targets,duration,cooldown,power ecc are determined so your default light might have changed.
(You will be keeping your current light unless you use /light reset).
Fixed an issue for determing the target type.

Luxmutua berry now changes the target too. (I thought it did already, don't really remember, it's been like a year)

Changed some Luxcognita messages, and some activation messages

Now by default, allies need to be below their HP percentage (config) in order to recive any buff from the triggering of
a player. This can be brought back to always getting a buff in the config file. (Same thing for pets and such)


Updated the Heal light VARIANT target:
- Now instead of targeting "peaceful creatures" it instead targets everyone and removes harmful status effects (except the Light Fatigue!)
Updated the STRENGTH light VARIANT target:
- Now instead of targeting "peaceful creatures" it instead targets self and gives increased attacks speed!


Added suggestion providers for select a new light type / target as well

Added an option to "Lock" a light, aka not being able to activate it from the get-go, but needing a command or eating a luxintus berry.
By default this option is not active. You can still manually lock someone's light.

Now the caster of a light with the ALLIES target will recive only a partial bonus from the effect, configurable from the config.

Fixed Strength light using wrong max/min values

Added option to set permissions, check the permissions.txt file on github!