@@ -17,10 +17,20 @@ public class ConfigProvider implements SimpleConfig.DefaultConfig {
     @SuppressWarnings("all")
     private final List<Pair> configsList = new ArrayList<>();
 
-    public void addKeyValuePair(Pair<String, ?> keyValuePair, String comment) {
+    public void addKeyValuePairVariant(Pair<String, ?> keyValuePair, String comment) {
         configsList.add(keyValuePair);
         configContents += keyValuePair.getFirst() + ":" + keyValuePair.getSecond() + " #"
                 + comment + " | default= " + keyValuePair.getSecond() +  " | type= " + keyValuePair.getSecond().getClass().getSimpleName() +"\n";
+    }
+
+    public void addKeyValuePair(Pair<String, ?> keyValuePair, String comment) {
+        if(keyValuePair.getFirst().equals("spacer")){
+            configContents += "\n";
+            return;
+        }
+        configsList.add(keyValuePair);
+        configContents += "#" + comment + " | default= " + keyValuePair.getSecond() +  " | type= " + keyValuePair.getSecond().getClass().getSimpleName() +"\n" +
+        keyValuePair.getFirst() + ":" + keyValuePair.getSecond() +"\n";
     }
 
     @Override
