@@ -127,9 +127,9 @@ public class SimpleConfig {
 
     // Modification by Kaupenjoe
     private void parseConfigEntry( String entry, int line ) {
-        if( !entry.isEmpty() && !entry.startsWith( "#" ) ) {
+        if( !entry.isEmpty() && !entry.startsWith( "#" )) {
             String[] parts = entry.split(":", 2);
-            if( parts.length == 2 ) {
+            if( parts.length == 2) {
                 // Recognizes comments after a value
                 String temp = parts[1].split(" #")[0];
                 config.put( parts[0], temp );
